--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,7 @@ table th {
   width: 100%;
   min-height: 100vh;
   display: flex;
+  gap: 40px;
   align-items: center;
   justify-content: center;
 }
@@ -164,8 +165,7 @@ table th {
   gap: 35px;
   border-radius: 15px;
   background: #e3e3e3;
-  box-shadow: 16px 16px 32px #c8c8c8,
-        -16px -16px 32px #fefefe;
+ 
   border-radius: 8px;
 }
 
@@ -248,7 +248,7 @@ table th {
   text-transform: uppercase;
   font-size: 10px;
   letter-spacing: 2px;
-  margin-bottom: 3em;
+  margin-bottom: 0em;
 }
 
 .enter:hover {
@@ -266,18 +266,21 @@ table th {
 
 
 .button-google {
-  max-width: 320px;
+  max-width: 250px;
   display: flex;
   padding: 0.5rem 1.4rem;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   line-height: 1.25rem;
   font-weight: 700;
+  margin-bottom: 11px;
   text-align: center;
   text-transform: uppercase;
   vertical-align: middle;
   align-items: center;
   border-radius: 0.5rem;
   border: 1px solid rgba(0, 0, 0, 0.25);
+  grid-gap: 0.75rem;
+  grid-gap: 0.75rem;
   gap: 0.75rem;
   color: rgb(65, 63, 63);
   background-color: #fff;
@@ -291,4 +294,136 @@ table th {
 
 .button-google:hover {
   transform: scale(1.02);
+}
+
+
+
+
+
+
+
+
+
+.form-container {
+  width: 320px;
+  border-radius: 0.5rem;
+  background-color: rgba(17, 24, 39, 1);
+  padding: 2.3rem;
+  color: rgba(243, 244, 246, 1);
+}
+
+.title {
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+
+.form {
+  margin-top: 1.5rem;
+}
+
+.input-group {
+  margin-top: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.input-group label {
+  display: block;
+  text-align: left;
+  color: rgba(156, 163, 175, 1);
+  margin-bottom: 4px;
+}
+
+.input-group input {
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 0.375rem;
+  border: 1px solid rgba(55, 65, 81, 1);
+  outline: 0;
+  background-color: rgba(17, 24, 39, 1);
+  padding: 0.75rem 1rem;
+  color: rgba(243, 244, 246, 1);
+}
+
+.input-group input:focus {
+  border-color: rgba(167, 139, 250);
+}
+
+.forgot {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: rgba(156, 163, 175,1);
+  margin: 8px 0 14px 0;
+}
+
+.forgot a,.signup a {
+  color: rgba(243, 244, 246, 1);
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.forgot a:hover, .signup a:hover {
+  text-decoration: underline rgba(167, 139, 250, 1);
+}
+
+.sign {
+  display: block;
+  width: 100%;
+  background-color: rgba(167, 139, 250, 1);
+  padding: 0.75rem;
+  text-align: center;
+  color: rgba(17, 24, 39, 1);
+  border: none;
+  border-radius: 0.375rem;
+  font-weight: 600;
+}
+
+.social-message {
+  display: flex;
+  align-items: center;
+  padding-top: 1rem;
+}
+
+.line {
+  height: 1px;
+  flex: 1 1 0%;
+  background-color: rgba(55, 65, 81, 1);
+}
+
+.social-message .message {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: rgba(156, 163, 175, 1);
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icons .icon {
+  border-radius: 0.125rem;
+  padding: 0.75rem;
+  border: none;
+  background-color: transparent;
+  margin-left: 8px;
+}
+
+.social-icons .icon svg {
+  height: 1.25rem;
+  width: 1.25rem;
+  fill: #fff;
+}
+
+.signup {
+  text-align: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: rgba(156, 163, 175, 1);
 }
