--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 .App {
   text-align: center;
+  
+  
 }
 
 .App-logo {
@@ -40,6 +44,7 @@
 
 table {
   border: 1px solid #ccc;
+  font-family: 'Black Ops One', cursive;
   border-collapse: collapse;
   margin: 0;
   padding: 0;
@@ -426,4 +431,335 @@ table th {
   font-size: 0.75rem;
   line-height: 1rem;
   color: rgba(156, 163, 175, 1);
+}
+
+
+
+
+
+
+
+h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+
+.two h1 {
+  text-transform: capitalize;
+}
+.two h1:before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60px;
+  height: 2px;
+  content: "";
+  background-color: #c50000;
+}
+
+.two h1 span {
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  padding-left: 0.25em;
+  color: rgba(0, 0, 0, 0.4);
+  padding-bottom: 10px;
+}
+.alt-two h1 {
+  text-align:center;
+}
+.alt-two h1:before {
+  left:50%; margin-left:-30px;
+}
+
+
+
+
+.add-video input {
+  width: 100%;
+  padding: 10px 20px;
+  background: #fef8f808;
+  backdrop-filter: blur(6px);
+  outline: 0;
+  border-radius: 131px 1px 59px 5px;
+  box-shadow: inset 12px 0px 0px 0px #233054;
+  border: 0;
+  border-bottom: 6px solid #2a3861;
+  transition: all 0.4s ease;
+  box-sizing: border-box;
+}
+.add-video input:focus {
+  color: white;
+  box-shadow: inset 355px 0px 0px 0px #233054;
+  /* border-radius: 35px 25px 25px 0px; */
+}
+
+
+.input-div {
+  color: white;
+  position: relative;
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-backdrop-filter: blur(26px);
+  backdrop-filter: blur(26px);
+  color: white;
+  overflow: hidden;
+  box-shadow: 0px 0px 0 rgb(255 255 255), inset 6px 5px 3px rgb(212 205 205), 0px 0px 0px rgb(255, 255, 255);
+  /* animation: flicker 2s linear infinite; */
+}
+
+.icon {
+  color: rgb(251, 251, 251);
+  font-size: 2rem;
+  cursor: pointer;
+  animation: iconflicker 2s linear infinite;
+}
+
+.input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer !important;
+}
+
+@keyframes flicker {
+  0% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252) , inset 0px 0px 10px rgb(1, 235, 252),0px 0px 5px rgb(255, 255, 255);
+  }
+
+  5% {
+    border: none;
+    box-shadow: none;
+  }
+
+  10% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252) , inset 0px 0px 10px rgb(1, 235, 252),0px 0px 5px rgb(255, 255, 255);
+  }
+
+  25% {
+    border: none;
+    box-shadow: none;
+  }
+
+  30% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252) , inset 0px 0px 10px rgb(1, 235, 252),0px 0px 5px rgb(255, 255, 255);
+  }
+
+  100% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252) , inset 0px 0px 10px rgb(1, 235, 252),0px 0px 5px rgb(255, 255, 255);
+  }
+}
+
+@keyframes iconflicker {
+  0% {
+    opacity: 1;
+  }
+
+  5% {
+    opacity: 0.2;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  25% {
+    opacity: 0.2;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
+
+.add-video {
+  display: flex;
+  font-family: 'Black Ops One', cursive;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 400px;
+  background: #f7f7f700;
+  grid-gap: 28px;
+
+  gap: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
+  padding: 20px 15px;
+  overflow: hidden;
+  position: relative;
+}
+
+
+
+
+
+
+
+
+
+.video-card {
+  padding: 0;
+  width: 100%;
+  grid-gap: 10px;
+  grid-gap: 10px;
+  gap: 10px;
+  border-radius: 0px 0px 25px 25px;
+  background: #e8e8e8;
+  box-shadow: 5px 5px 6px #dadada,
+       -5px -5px 6px #f6f6f6;
+  transition: 0.4s;
+  text-align: left;
+  margin: 10px auto;
+}
+
+.video-card:hover {
+  translate: 0 -10px;
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: 600;
+  width: 100%;
+  color: #112040;
+ 
+}
+
+.card-image {
+  min-height: 170px;
+  background-color: #c9c9c9;
+  border-radius: 15px;
+  box-shadow: inset 8px 8px 10px #c3c3c3,
+            inset -8px -8px 10px #cfcfcf;
+}
+
+.card-body {
+ 
+  color: rgb(31, 31, 31);
+  font-size: 15px;
+}
+
+.footer {
+  font-size: 13px;
+  text-align: left;
+  color: #636363;
+  width: 100%;
+ 
+}
+
+.by-name {
+  font-weight: 700;
+}
+
+
+.text-div {
+  padding: 22px;
+}
+
+button.add-vid-btn {
+  font-size: 15px;
+  padding: 10px 20px;
+  align-items: center;
+  color: #18264c;
+  border: 0;
+  display: flex;
+  transition: 0.5s ease all;
+  gap: 14px;
+  box-shadow: inset 9px 0px 0px 0px #18264c;
+  border-radius: 22px;
+}
+button.add-vid-btn:hover{
+
+  box-shadow: inset 200px 0px 4px 0px rgb(17, 6, 69);
+  color: white;
+
+}
+button.add-vid-btn:hover svg{
+  scale: 1.4;
+ transform: rotate(35deg);
+}
+button.add-vid-btn svg{
+  font-size: 25px;
+  transition: all 0.3s ease ;
+}
+
+.add-video::after {
+  background-image: url('https://images.unsplash.com/photo-1689443111070-2c1a1110fe82?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80');
+  position: absolute;
+  background-size: cover;
+  content: "";
+  filter: blur(6px);
+  overflow: hidden;
+  top: 0;
+  z-index: -1;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 25px;
+  background-position: center;
+}
+.add-video h2 {
+  color: white;
+  font-family: 'Black Ops One', cursive;
+  text-transform: uppercase;
+  -webkit-text-stroke: #1a264c;
+  text-shadow: 1px 2px #a6a6a6;
+  -webkit-text-stroke-width: 1px;
+  font-weight: 800;
+  word-spacing: 8px;
+  margin: 0;
+  font-size: 30px;
+  letter-spacing: 1px;
+}
+.logout-btn{
+
+    padding: 16px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: #0e1832;
+    box-shadow: inset 7px 0px 9px 0px #a3a3a3;
+    color: white;
+    border-radius: 25px;
+    outline: 0;
+    border: 0;
+
 }
